--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <h1 class="headings">Bio</h1>
                     <div>
                         <p>I'm a CS undergradute from India who loves problem solving, creating new things,
-                            & exploring technologies. I enjoy solving questions of Data Structure and Algorithms. 
+                            & exploring technologies. 
                             As of now, I'm exploring Web Development and really enjoying it.</p>
                             <form method="get" action="assets/resume.pdf">
                                 <button type="submit">Résumé</button>
@@ -287,7 +287,7 @@
                 </div>
             </div>
             
-            <div class="footer sections" style="margin: 0px;">
+            <div class="footer" style="margin: 0px;">
                 <div class="footer-text">
                     <h1 style="font-weight: 600; font-family: monospace; margin: 0px;"> < /Portfolio   > </h1>
                 </div>
