--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="landing">
                 <div class="landing-text">
-                    <h1 style="font-weight: 600; font-family: monospace;">< Portfolio ></h1>
+                    <h1 style="font-weight: 600; font-family: monospace;">&lt;Portfolio&gt;</h1>
                     <h1 style="font-weight: 200;">Hi, I'm Asad.</h1>
                     <a href="#About"><img class="blink down"src="images/down.svg"></a>
                 </div>
@@ -38,11 +38,11 @@
                             </div>
                         </div>
                         <div class="small-section">
-                            <h1 style="font-weight: 400;">Academics</h1>
+                            <h1 style="font-weight: 400;">Education</h1>
                             <h2>B. Sc (Honours) Computer Science</h2>
                             <h3>Graphic Era (Deemed To Be University)</h3>
                             <h4>2020-2023</h4>
-                    </div>
+                        </div>
                 </div>
             </div>
             
@@ -114,7 +114,7 @@
                                 <li>Matplot</li>
                                 <li>Statistics</li>
                             </ul>
-                            <a href="https://github.com/asdhamidi/6.0002"><img style="transform:scale(0.3);" class="icon-pic" src="images/github.png"></a>
+                            <a href="https://github.com/asdhamidi/6.0002"><img style="transform:scale(0.3);" src="images/github.png"></a>
                         </div>
                         <div class="project">
                             <h2><b>DSA</b></h2>
@@ -133,7 +133,7 @@
             
             <div class="footer" style="margin: 0px;">
                 <div class="footer-text">
-                    <h1> < /Portfolio   > </h1>
+                    <h1> &lt;/Portfolio&gt; </h1>
                 </div>
             </div>
 
