Changed Projects' design.

--- a/index.html
+++ b/index.html
@@ -91,10 +91,13 @@
             </div>
             
             <div class="big-section" id="Projects">
-                    <h1 class="headings">Projects</h1>
-                    <div class="subsection" style="flex-wrap: wrap;">
-                        <div class="project">
+                <h1 class="headings">Projects</h1>
+                <div class="subsection" style="flex-wrap: wrap;">
+                    <div class="card">
+                        <div class="face">
                             <h2><b>6.0001</b></h2>
+                        </div>
+                        <div class="data">
                             <h3>Completed Introduction to Computer Science and Programming in Python by MITOCW. 
                                 Solved problem set of varying levels from beginner to medium.</h3>
                             <ul class="tech">
@@ -102,11 +105,14 @@
                             </ul>
                             <a href="https://github.com/asdhamidi/6.0001"><img class="icon-pic" src="images/github.svg"></a>
                         </div>
-                        <div class="project">
+                    </div>
+                    <div class="card">
+                        <div class="face">
                             <h2><b>6.0002</b></h2>
+                        </div>
+                        <div class="data">
                             <h3>Completed Introduction to Computational Thinking and Data Science by MITOCW. 
-                                Got an introduction to various Data Science topics like Monte Carlo, Clustering, KNN, ML, etc. 
-                                Solved various problem sets based on those.</h3>
+                                Got an introduction to various Data Science topics like Classification, Clustering, KNN, ML, and other statistics topics.</h3>
                             <ul class="tech">
                                 <li>Python</li>
                                 <li>Numpy</li>
@@ -114,13 +120,16 @@
                                 <li>Matplot</li>
                                 <li>Statistics</li>
                             </ul>
-                            <a href="https://github.com/asdhamidi/6.0002"><img src="images/github.svg"></a>
+                            <a href="https://github.com/asdhamidi/6.0002"><img class="icon-pic" src="images/github.svg"></a>
                         </div>
-                        <div class="project">
+                    </div>
+                    <div class="card">
+                        <div class="face">
                             <h2><b>DSA</b></h2>
+                        </div>
+                        <div class="data">
                             <h3>Did Data Structures and Algorithms in Python. Learnt and coded various Data Structures like Linked Lists, Heaps, Trees, Graphs, etc
-                                in C and Python.
-                            </h3>
+                                in C and Python.</h3>
                             <ul class="tech">
                                 <li>Python</li>
                                 <li>C</li>
@@ -129,6 +138,7 @@
                             <a href="https://github.com/asdhamidi/DSA"><img class="icon-pic" src="images/github.svg"></a>
                         </div>
                     </div>
+                </div>
             </div>
             
             <div class="footer" style="margin: 0px;">
