--- a/index.html
+++ b/index.html
@@ -92,14 +92,13 @@
             
             <div class="big-section" id="Projects">
                 <h1 class="headings">Projects</h1>
-                <div class="subsection" style="flex-wrap: wrap;">
+                <div class="subsection">
                     <div class="card">
                         <div class="face">
-                            <h2><b>6.0001</b></h2>
+                            <h1><b>6.0001</b></h1>
                         </div>
                         <div class="data">
-                            <h3>Completed Introduction to Computer Science and Programming in Python by MITOCW. 
-                                Solved problem set of varying levels from beginner to medium.</h3>
+                            <h2>Solutions to Introduction to Computer Science and Programming in Python by MITOCW.</h2>
                             <ul class="tech">
                                 <li>Python</li>
                             </ul>
@@ -108,16 +107,14 @@
                     </div>
                     <div class="card">
                         <div class="face">
-                            <h2><b>6.0002</b></h2>
+                            <h1><b>6.0002</b></h1>
                         </div>
                         <div class="data">
-                            <h3>Completed Introduction to Computational Thinking and Data Science by MITOCW. 
-                                Got an introduction to various Data Science topics like Classification, Clustering, KNN, ML, and other statistics topics.</h3>
+                            <h2>Solutions to Introduction to Computational Thinking and Data Science by MITOCW. 
+                                </h2>
                             <ul class="tech">
                                 <li>Python</li>
-                                <li>Numpy</li>
-                                <li>Scipy</li>
-                                <li>Matplot</li>
+                                <li>Matplotlib</li>
                                 <li>Statistics</li>
                             </ul>
                             <a href="https://github.com/asdhamidi/6.0002"><img class="icon-pic" src="images/github.svg"></a>
@@ -125,11 +122,10 @@
                     </div>
                     <div class="card">
                         <div class="face">
-                            <h2><b>DSA</b></h2>
+                            <h1><b>DSA</b></h1>
                         </div>
                         <div class="data">
-                            <h3>Did Data Structures and Algorithms in Python. Learnt and coded various Data Structures like Linked Lists, Heaps, Trees, Graphs, etc
-                                in C and Python.</h3>
+                            <h2>Data Structures and Algorithms in Python.</h2>
                             <ul class="tech">
                                 <li>Python</li>
                                 <li>C</li>
